--- a/templates/components/timeline/version_4.html
+++ b/templates/components/timeline/version_4.html
@@ -118,6 +118,26 @@
                             </div>
                         </div>
 
+
+
+                        <div class="relative pl-8 sm:pl-32 py-6 group">
+                            <div class="font-caveat font-medium text-2xl text-[#699a3a] mb-1 sm:mb-0">
+                                New Beginning
+                            </div>
+                            <div
+                                class="flex flex-col sm:flex-row items-start mb-1 group-last:before:hidden before:absolute before:left-2 sm:before:left-0 before:h-full before:px-px before:bg-slate-300 sm:before:ml-[6.5rem] before:self-start before:-translate-x-1/2 before:translate-y-3 after:absolute after:left-2 sm:after:left-0 after:w-2 after:h-2 after:bg-[#262364] after:border-4 after:box-content after:border-blue-200  after:rounded-full sm:after:ml-[6.5rem] after:-translate-x-1/2 after:translate-y-1.5">
+                                <time
+                                    class="sm:absolute left-0 sm:-translate-x-1/2 sm:-translate-y-1/3 sm:mr-4 inline-flex items-center justify-center text-xs font-semibold uppercase w-28 h-6 mb-3 sm:mb-0 text-[#a61766] bg-pink-200 rounded-full sm:ml-4">
+                                         1 October 2025
+                                </time>
+                            </div>
+                            
+                            <div class="text-[#262364]">
+                            <span
+                                    class="font-semibold text-[#a61766]">DataHelix<sup>TM</sup> AI</span> begins a bold new phase expanding our genomics intelligence platform to unlock deeper insights across infectious diseases, oncology, and precision medicine.  
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
