--- a/templates/components/who_we_are/version_1.html
+++ b/templates/components/who_we_are/version_1.html
@@ -21,7 +21,7 @@
       <p class="text-gray-800 text-lg leading-relaxed">
         <span class="text-[#a61766] font-semibold">At DataHelix<sup>TM</sup> AI,</span> we stand at the forefront of innovation in genomics. With a relentless pursuit of excellence, we're pioneering the next generation of genetic solutions, making breakthroughs that redefine what's possible.
         <span class="inline-block relative">
-          <strong class="text-[#27276c]">DataHelix<sup>TM</sup> AI,</strong>
+          <strong class="text-[#27276c]">DataHelix<sup>TM</sup> AI</strong>
           <span class="absolute bottom-0 left-0 w-full h-1 bg-[#a61766] border-dashed border-b-2 border-[#a61766]"></span>
         </span>
       </p>
