--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         {% block title %}
-        miBiome Therapeutics
+       DataHelix<sup>TM</sup> AI
         {% endblock title %}
     </title>
-    <link rel="shortcut icon" href="{% public_assets 'images/logo.png' %}" type="image/x-icon">
+   <link rel="icon"
+                  type="image/png"
+                  href="{% public_assets 'favicon/favicon-96x96.png' %}"
+                  sizes="96x96" />
+            <link rel="icon"
+                  type="image/svg+xml"
+                  href="{% public_assets 'favicon/favicon.svg' %}" />
+            <link rel="shortcut icon" href="{% static 'favicon/favicon.ico' %}" />
+            <link rel="apple-touch-icon"
+                  sizes="180x180"
+                  href="{% static 'favicon/apple-touch-icon.png' %}" />
+            <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}" />
     <link href="{% static 'css/output.css' %}" rel="stylesheet">
 </head>
 
