--- a/templates/base_4.html
+++ b/templates/base_4.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         {% block title %}
-       DataHelix<sup>TM</sup> AI
+       DataHelix™ AI
         {% endblock title %}
     </title>
     <link rel="icon"
